<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>bjl_file_system_viewer</artifactId>
	<groupId>com.bringardner</groupId>
	<version>1.0.1</version>
	<name>BJLFileSystemViewer</name>
	<description>This project defines an Interface of a "FileSystem" that looks
		very much like a Java File but enables multiple implementations to
		coexists (i,e, FTP, SFTP, ...) . </description>
	<url>http://bringardner.us/BJL/${project.artifactId}</url>

	<build>
		<!-- <sourceDirectory>src</sourceDirectory> -->
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.3</version>
					<configuration>
						<source>11</source>
						<target>11</target>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.1.0</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<groupId>com.github.github</groupId>
					<artifactId>site-maven-plugin</artifactId>
					<version>0.12</version>
					<configuration>
						<message>Maven artifacts for ${project.version}</message>
						<noJekyll>true</noJekyll>
						<outputDirectory>${project.build.directory}</outputDirectory>
						<branch>refs/heads/${branch-name}</branch>
						<includes>
							<include>**/*</include>
						</includes>
						<merge>true</merge>
						<repositoryName>BjlFileSystemViewer</repositoryName>
						<repositoryOwner>tony-bringardner</repositoryOwner>
						<server>github</server>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>site</goal>
							</goals>
							<phase>deploy</phase>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.2</version>
					<configuration>
						<test><!-- your test suite class name should be here -->
						</test>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>tony-bringardner</name>
			<url>
				https://maven.pkg.github.com/tony-bringardner/BjlFileSystemViewer</url>
		</repository>

	</distributionManagement>


	<dependencies>
	<dependency>
			<groupId>us.bringardner</groupId>
			<artifactId>bjl_core</artifactId>
			<version>0.1.1</version>
		</dependency>

		<dependency>
			<groupId>us.bringardner</groupId>
			<artifactId>bjl_io</artifactId>
			<version>0.1.1</version>
		</dependency>
		<dependency>
			<groupId>us.bringardner</groupId>
			<artifactId>bjl_net_framework</artifactId>
			<version>0.1.1</version>
		</dependency>

		<dependency>
			<groupId>us.bringardner</groupId>
			<artifactId>bjl_file_system</artifactId>
			<version>0.1.1</version>
		</dependency>
		<dependency>
			<groupId>us.bringardner</groupId>
			<artifactId>bjl_file_system_sftp</artifactId>
			<version>0.1.1</version>
		</dependency>	
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.54</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.5.4</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf-intellij-themes</artifactId>
			<version>3.5.4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.miglayout/miglayout-swing -->
<dependency>
    <groupId>com.miglayout</groupId>
    <artifactId>miglayout-swing</artifactId>
    <version>11.4.2</version>
</dependency>

<dependency>
  <groupId>com.formdev</groupId>
  <artifactId>flatlaf-fonts-inter</artifactId>
  <version>4.0</version>
</dependency>

<dependency>
  <groupId>com.formdev</groupId>
  <artifactId>flatlaf-fonts-jetbrains-mono</artifactId>
  <version>2.304</version>
</dependency>

<dependency>
  <groupId>com.formdev</groupId>
  <artifactId>flatlaf-fonts-roboto</artifactId>
  <version>2.137</version>
</dependency>

<dependency>
  <groupId>com.formdev</groupId>
  <artifactId>flatlaf-fonts-roboto-mono</artifactId>
  <version>3.000</version>
</dependency>


		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf-extras</artifactId>
			<version>3.5.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.sshd</groupId>
			<artifactId>apache-sshd</artifactId>
			<version>0.12.0</version>
			<type>zip</type>
			<classifier>src</classifier>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.jfcunit</groupId>
			<artifactId>jfcunit</artifactId>
			<version>2.08</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.7.3</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>us.bringardner</groupId>
			<artifactId>bjl_file_system_jdbc</artifactId>
			<version>0.1.0</version>
		</dependency>
	</dependencies>
</project>